Improved swagger; refactored some default endpoints in the framework